# benchmark

./: .clang-format  .gitignore  CMakeLists.txt  ComplexDiagonalization.cpp  FilesWithNaN.txt  RM_hemm.cpp  RM_hemm.out  RM_hemm_MKL.cpp  RM_hemm_MKL.out  Result.txt  SelfAdjointDiagonalization.cpp  benchmark.numbers  benchmark.xlsx  condition.md  macros.hpp  text.txt
